# System-Design

./: .gitignore
1_OOPS-Basic/: CMakeLists.txt  Card.cxx  Command_to_run  CreditCard.hpp  DebitCard.cxx  DebitCard.hpp  PaymentMethod.hpp  PaymentService.hpp  makefile
2_UML/: Class.puml
2_UML/Association/: Aggregation.puml  Aggregation_composition_association.puml  Dependency.puml  composition.puml
3_SOLID/: DIP.hpp  ISP.hpp  LSP.hpp  OCP.hpp  SOLID.txt  SRP.hpp
4_BehaviouralPattern/Command/: command.puml
4_BehaviouralPattern/Memento/: CMakeLists.txt  History.cxx  History.hpp  TextEditor.cxx  TextEditor.hpp  TextEditorMemento.cxx  TextEditorMemento.hpp  main.cxx  memento.puml
4_BehaviouralPattern/Observer/: CMakeLists.txt  IObserver.hxx  ISubject.hxx  Notes.txt  Observer.puml  Screen1.cxx  Screen1.hxx  Screen2.cxx  Screen2.hxx  WeatherStation.cxx  WeatherStation.hxx  main.cxx
4_BehaviouralPattern/Strategy/: Strategy.puml
5_CreationalPattern/AbstractFactory/: AbstractFactory.puml  Application.cxx  Application.hxx  CMakeLists.txt  IButton.hxx  IScroll.hxx  LinuxButton.cxx  LinuxButton.hxx  LinuxScroll.cxx  LinuxScroll.hxx  LinuxUIFactory.cxx  LinuxUIFactory.hxx  UIAbstractFactory.hxx  WindowsButton.cxx  WindowsButton.hxx  WindowsScroll.cxx  WindowsScroll.hxx  WindowsUIFactory.cxx  WindowsUIFactory.hxx  abstractfactory.sh  main.cxx
5_CreationalPattern/FactoryMethod/: FactoryMethod.puml  FactoryMethod2.puml  FactoryMethodPatternFunctor  FactoryMethodPatternFunctor.cxx
5_CreationalPattern/FactoryMethod/approach1/: CMakeLists.txt  factorymethod.cxx  factorymethod.hpp  main.cxx
5_CreationalPattern/Singleton/: CMakeLists.txt  Singleton.hpp  Singleton.puml  main.cxx
OOPS-Basic/: Card.hpp  CreditCard.cxx  PaymentService.cxx  main.cxx
